[package]
name = "zx"
version = "1.0.0"
edition = "2021"

description = "Make extracting archive plain and simple"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/zx/"
repository = "https://github.com/jondot/zx"
keywords = ["zip", "tar", "archive", "extract"]
license = "Apache-2.0"
readme = "../README.md"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/zx-x86_64-windows.zip"
bin-dir = "zx-x86_64-windows/zx.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/zx-x86_64-macos.tar.xz"
bin-dir = "zx-x86_64-macos/zx"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/zx-aarch64-macos.tar.xz"
bin-dir = "zx-x86_64-macos/zx"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/zx-x86_64-linux.tar.xz"
bin-dir = "zx-x86_64-linux/zx"
pkg-fmt = "txz"

[dependencies]


clap = { version = "4", features = ["cargo", "derive"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"
regex = "*"

decompress = { version = "*", path = "../../decompress/decompress" }
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
trycmd = "0.14.10"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
